--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
     "mongoose": "^4.0.6",
-    "geo-distance-js": "~1.0.0"
+    "geolib": "~2.0.17",
+    "underscore": "~1.8.3"
   },
   "engines": {
     "node": "0.12.2"
