--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "serve-favicon": "~2.3.0",
     "mongoose": "^4.0.6",
     "geolib": "~2.0.17",
-    "underscore": "~1.8.3"
+    "underscore": "~1.8.3",
+    "braintree": "~1.27.0"
   },
   "engines": {
     "node": "0.12.2"
